# 3DMath

./: CMakeLists.txt  EulerAngles.cpp  EulerAngles.h  MathUtils.h  Matrix4x3.cpp  Matrix4x3.h  Quaternion.cpp  Quaternion.h  README.md  RotationMatrix.cpp  RotationMatrix.h  Vector3.cpp  main.cpp  mathUtils.cpp  mathUtils.h  vector3.cpp
inc/: EulerAngles.h  MathUtils.h  Matrix4x3.h  Quaternion.h  RotationMatrix.h  Vector2.h  Vector3.h
src/: EulerAngles.cpp  MathUtils.cpp  Matrix4x3.cpp  Quaternion.cpp  RotationMatrix.cpp  Vector2.cpp
